NIC/ingress_drf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drf-ingress
  namespace: default
  labels:
    app: drf-app
    app.kubernetes.io/instance: drf-app
    app.kubernetes.io/managed-by: yaml
    app.kubernetes.io/part-of: drfapp
    app.kubernetes.io/version: 0.0.0
    heritage: yaml
    release: kube-prometheus-stack
  annotations:
    meta.helm.sh/release-name: drfapp
    meta.helm.sh/release-namespace: default
    # Убираем rewrite, он не нужен
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: drf-app-service
                port:
                  number: 80
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: drf-app-service
                port:
                  number: 80
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: drf-app-service
                port:
                  number: 80
